fixed broken css

--- a/MY webpage/style.css
+++ b/MY webpage/style.css
@@ -65,7 +65,7 @@ a {
 
   width: 100%;
   border-radius: 15px;
-  flex-direction: colum
+  flex-direction: column;
    box-shadow: 0 4px 8px rgba(0, 0, 0.2);
 }
 
